@@ Fixed spacing for position indicator on tiles page    Also fixed state shading in IE8

--- a/app/assets/stylesheets/ie/screen_IE8.scss
+++ b/app/assets/stylesheets/ie/screen_IE8.scss
@@ -30,7 +30,7 @@ body.invitations-show div.container div.inv-forms form {padding-bottom:20px!impo
 }
 
 
-.acts .header .navigation .nav-home, .users .header .navigation .nav-activity, .scores .header .navigation .nav-scores, .users-index .header .navigation .nav-directory {
+.acts .header .navigation .nav-home, .tiles .header .navigation .nav-tiles, .users .header .navigation .my-profile.nav-activity, .scores .header .navigation .nav-scores, .users-index .header .navigation .nav-directory {
 	border-radius:0!important;
 	z-index:9999!important;
 }
